# sfml-platformer

./: .gitignore  CMakeLists.txt
include/platformer/core/: Command.h  CommandQueue.h  Game.h  PlayerController.h  World.h
include/platformer/entities/: Entity.h  Player.h
include/platformer/util/: ResourceHolder.h
src/: main.cpp
src/core/: CommandQueue.cpp  Game.cpp  PlayerController.cpp  World.cpp
src/entities/: Player.cpp
src/util/: ResourceHolder.cpp
